complete first homework

--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -3,17 +3,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "10a050c2",
+   "id": "ec0fb5d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fe40aa02",
+   "id": "5b7edc8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f4d68667",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +40,7 @@
        "'1.4.2'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,41 +51,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "6c770ce5",
+   "execution_count": 4,
+   "id": "562111a4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pyarrow\n",
-      "  Downloading pyarrow-16.1.0-cp39-cp39-manylinux_2_28_x86_64.whl (40.8 MB)\n",
-      "\u001b[K     |████████████████████████████████| 40.8 MB 20.8 MB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.16.6 in /home/codespace/anaconda3/lib/python3.9/site-packages (from pyarrow) (1.21.5)\n",
-      "Installing collected packages: pyarrow\n",
-      "Successfully installed pyarrow-16.1.0\n"
+      "/workspaces/MLops-zoomcamp\n"
      ]
     }
    ],
    "source": [
-    "!pip install pyarrow"
+    "cd .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "818c13e8",
+   "execution_count": 5,
+   "id": "fb260a9b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_parquet('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2024-01.parquet')"
+    "df = pd.read_parquet('./data/yellow_tripdata_2023-01.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "96824291",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['VendorID', 'tpep_pickup_datetime', 'tpep_dropoff_datetime',\n",
+       "       'passenger_count', 'trip_distance', 'RatecodeID', 'store_and_fwd_flag',\n",
+       "       'PULocationID', 'DOLocationID', 'payment_type', 'fare_amount', 'extra',\n",
+       "       'mta_tax', 'tip_amount', 'tolls_amount', 'improvement_surcharge',\n",
+       "       'total_amount', 'congestion_surcharge', 'airport_fee'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a117188d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f16aaaf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['duration'] = df.tpep_dropoff_datetime - df.tpep_pickup_datetime\n",
+    "df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a9cf83f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42.594351241920904"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['duration'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5fcad5b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9812202822125979"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_df = df[(df['duration'] >=1) & (df['duration'] <=60)]\n",
+    "fraction_left = len(filtered_df) / len(df)\n",
+    "fraction_left"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d2988795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[(df.duration >= 1) & (df.duration <= 60)]\n",
+    "\n",
+    "categorical = ['PULocationID', 'DOLocationID']\n",
+    "numerical = ['trip_distance']\n",
+    "\n",
+    "df[categorical] = df[categorical].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "20013d42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PULocationID    object\n",
+       "DOLocationID    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[categorical].dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "32ac0434",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv = DictVectorizer(sparse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "84987c80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# len(dv.feature_names_)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cdf26b2",
+   "id": "a4bc1bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
+    "\n",
+    "dv = DictVectorizer()\n",
+    "X_train = dv.fit_transform(train_dicts)\n",
+    "\n",
+    "target = 'duration'\n",
+    "y_train = df[target].values\n",
+    "\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = lr.predict(X_train)\n",
+    "\n",
+    "mean_squared_error(y_train, y_pred, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aedc15c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in the validation set\n",
+    "yellow_feb_23 = pd.read_parquet('./data/yellow_tripdata_2023-01.parquet')\n",
+    "\n",
+    "# create a new column 'duration' in minutes\n",
+    "yellow_feb_23['duration'] = yellow_feb_23.tpep_dropoff_datetime - yellow_feb_23.tpep_pickup_datetime\n",
+    "# convert duration to seconds\n",
+    "yellow_feb_23.duration = yellow_feb_23.duration.apply(lambda td: td.total_seconds()/60)\n",
+    "\n",
+    "# define categorical and numerical columns\n",
+    "categorical = ['PULocationID', 'DOLocationID']\n",
+    "numerical = ['trip_distance']\n",
+    "\n",
+    "# convert categorical columns to strings\n",
+    "yellow_feb_23[categorical] = yellow_feb_23[categorical].astype(str)\n",
+    "\n",
+    "# remove outliers by clipping duration between 1 and 60 mins\n",
+    "yellow_feb_23 = yellow_feb_23[(yellow_feb_23.duration >= 1) & (yellow_feb_23.duration <= 60)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d482053",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Instantiate a dictionary vectorizer\n",
+    "dv = DictVectorizer()\n",
+    "train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
+    "\n",
+    "X_train = dv.fit_transform(train_dicts)\n",
+    "\n",
+    "# turn the categorical columns into a list of dictionaries\n",
+    "val_dicts = yellow_feb_23[categorical].to_dict(orient='records')\n",
+    "X_val = dv.transform(val_dicts)\n",
+    "\n",
+    "# define target variable and assign to y_val\n",
+    "target = 'duration'\n",
+    "y_train = df[target].values\n",
+    "y_val = yellow_feb_23[target].values\n",
+    "\n",
+    "# instantiate & fit our model to the TRAINING set\n",
+    "lr = LinearRegression()\n",
+    "lr.fit(X_train,y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5170be3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = lr.predict(X_val)\n",
+    "mean_squared_error(y_val, y_pred, squared=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c5eedb7",
    "metadata": {},
    "outputs": [],
    "source": []
