--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d2988795",
+   "id": "48bbb584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "84987c80",
+   "id": "7f648570",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,10 +239,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4bc1bfb",
+   "execution_count": 16,
+   "id": "1bc2fcda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.649143388169879"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_dicts = df[categorical + numerical].to_dict(orient='records')\n",
     "\n",
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1aedc15c",
    "metadata": {},
    "outputs": [],
@@ -288,10 +299,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1d482053",
+   "execution_count": 18,
+   "id": "a7b71117",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Instantiate a dictionary vectorizer\n",
     "dv = DictVectorizer()\n",
@@ -315,10 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5170be3f",
+   "execution_count": 19,
+   "id": "b0215b97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7.649343165600712"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_pred = lr.predict(X_val)\n",
     "mean_squared_error(y_val, y_pred, squared=False)"
@@ -327,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5eedb7",
+   "id": "df588ee3",
    "metadata": {},
    "outputs": [],
    "source": []
